[package]
name = "interceptor"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "interceptor"
path = "main.rs"

[dependencies]
stepwise = { version = "0", path = "../stepwise" }

ethers-providers = { version = "2", features = [
    "ws",
], default-features = false }

ethers-core = { version = "2", default-features = false }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
