[package]
name = "interceptor"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "interceptor"
path = "main.rs"

[dependencies]
mequeue = { version = "0", path = "../mequeue" }

ethers-providers = { version = "2", features = [
    "ws",
], default-features = false }

ethers-core = { version = "2", default-features = false }
async-channel = "1"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
